--- a/src/main/resources/druid.properties
+++ b/src/main/resources/druid.properties
@@ -1,6 +1,6 @@
 # 连接池的属性配置
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://192.168.56.102:3306/travel?serverTimezone=GMT
+url=jdbc:mysql://localhost:3306/travel?serverTimezone=GMT
 username =root
 password =123456
 initialSize=5
