--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>BooksShop</artifactId>
+  <artifactId>Shop</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>BooksShop Maven Webapp</name>
+  <name>Shop Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -110,7 +110,7 @@
           <!-- 通过maven tomcat7:run运行项目时，访问项目的端口号 -->
           <port>80</port>
           <!-- 项目访问路径  本例：localhost:9090,  如果配置的aa， 则访问路径为localhost:9090/aa-->
-          <path>/booksShop</path>
+          <path>/Shop</path>
         </configuration>
       </plugin>
     </plugins>
